tdf#48622 Add new border line width defaults
* Thin (0.75pt)
* Medium (2pt)
* Thick (4pt)
* Extra thick (5pt)

This unifies the default border line widths throughout the program.
The hairline width (0.05pt) no longer available by default since it's too thin for printing.
Users can however still set any line width they want by chosing "Custom" in the "Border" tabpage.
Also, existing documents won't be changed. The new defaults are just for newly added borders.

This also improve compatiblity with Excel (Thin, Medium and Thick values match Excel's choices).

Change-Id: I7af85dc189a688a749812824508c33c7814b50f5

--- a/cui/uiconfig/ui/borderpage.ui
+++ b/cui/uiconfig/ui/borderpage.ui
@@ -51,6 +51,9 @@
         <col id="0" translatable="yes" context="borderpage|linewidthlb">Thick</col>
       </row>
       <row>
+        <col id="0" translatable="yes" context="borderpage|linewidthlb">Extra thick</col>
+      </row>
+      <row>
         <col id="0" translatable="yes" context="borderpage|linewidthlb">Custom</col>
       </row>
     </data>
