Related: tdf#137748 "Update" should have use-underline
Change-Id: I8303cd8d2cabd8888797758870480483661d8801
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/134391
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Tested-by: Jenkins

--- a/sw/uiconfig/swriter/ui/statisticsinfopage.ui
+++ b/sw/uiconfig/swriter/ui/statisticsinfopage.ui
@@ -242,6 +242,7 @@
         <property name="can_focus">True</property>
         <property name="receives_default">True</property>
         <property name="halign">start</property>
+        <property name="use-underline">True</property>
       </object>
       <packing>
         <property name="left_attach">1</property>
