sw content controls, dropdown: edit list items: add modify and delete
Modify is really similar to insert, just we pre-fill the list item
properties dialog with old data.

Also allow moving items up / down, and eliminate a not needed frame in
the inner dialog, which would assert when using the gen backend.

With this, the content control dialog is quite complete for dropdowns.

Change-Id: I26e77dd881f0a0eea44d2a6137f76fd29ab32fc5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/134405
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins
(cherry picked from commit a1e2fc012113339564b3414d03a6eaf118ff2713)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/134470
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>

--- a/sw/uiconfig/swriter/ui/contentcontroldlg.ui
+++ b/sw/uiconfig/swriter/ui/contentcontroldlg.ui
@@ -206,22 +206,8 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">False</property>
-                <property name="pack-type">end</property>
+                <property name="pack-type">start</property>
                 <property name="position">0</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkButton" id="remove">
-                <property name="label" translatable="yes" context="contentcontordlg|remove">Remove</property>
-                <property name="visible">True</property>
-                <property name="can-focus">True</property>
-                <property name="receives-default">True</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">False</property>
-                <property name="pack-type">end</property>
-                <property name="position">1</property>
               </packing>
             </child>
             <child>
@@ -234,8 +220,50 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">False</property>
-                <property name="pack-type">end</property>
+                <property name="pack-type">start</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkButton" id="remove">
+                <property name="label" translatable="yes" context="contentcontordlg|remove">Remove</property>
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="receives-default">True</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="pack-type">start</property>
                 <property name="position">2</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkButton" id="moveup">
+                <property name="label" translatable="yes" context="contentcontordlg|moveup">Move Up</property>
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="receives-default">True</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="pack-type">start</property>
+                <property name="position">3</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkButton" id="movedown">
+                <property name="label" translatable="yes" context="contentcontordlg|movedown">Move Down</property>
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="receives-default">True</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="pack-type">start</property>
+                <property name="position">4</property>
               </packing>
             </child>
           </object>
