GtkCellRendererText 'text" attrib is the index of the text into the model
and we need a trailing "id" column for [s|g]et_id which is assumed to exist

Change-Id: Icb32e78ac76443cc15ca70f2e9248b92791b7890

--- a/starmath/uiconfig/smath/ui/sidebarelements_math.ui
+++ b/starmath/uiconfig/smath/ui/sidebarelements_math.ui
@@ -6,6 +6,8 @@
     <columns>
       <!-- column-name text -->
       <column type="gchararray"/>
+      <!-- column-name id -->
+      <column type="gchararray"/>
     </columns>
   </object>
   <object class="GtkPaned" id="MathElementsPanel">
@@ -41,7 +43,7 @@
                 <child>
                   <object class="GtkCellRendererText" id="cellrenderertext1"/>
                   <attributes>
-                    <attribute name="text">1</attribute>
+                    <attribute name="text">0</attribute>
                   </attributes>
                 </child>
               </object>
