--- a/sfx2/uiconfig/ui/password.ui
+++ b/sfx2/uiconfig/ui/password.ui
@@ -318,6 +318,11 @@
                 <property name="can-focus">False</property>
                 <property name="margin-start">6</property>
                 <property name="xalign">0</property>
+                <child internal-child="accessible">
+                  <object class="AtkObject" id="minlenft-atkobject">
+                    <property name="AtkObject::accessible-role" translatable="no">static</property>
+                  </object>
+                </child>
               </object>
               <packing>
                 <property name="expand">False</property>
