sw content controls, dropdown: disable NOP buttons in the property dialog
Rename, delete, move up & move down does nothing initially, disable the
buttons when their event handler would just do an early return to make
this less confusing.

Change-Id: I4cfb9750d07b4686440c05901ef72e8ce4de961e

--- a/sw/uiconfig/swriter/ui/contentcontroldlg.ui
+++ b/sw/uiconfig/swriter/ui/contentcontroldlg.ui
@@ -214,6 +214,7 @@
               <object class="GtkButton" id="modify">
                 <property name="label" translatable="yes" context="contentcontordlg|modify">Modify</property>
                 <property name="visible">True</property>
+                <property name="sensitive">False</property>
                 <property name="can-focus">True</property>
                 <property name="receives-default">True</property>
               </object>
@@ -228,6 +229,7 @@
               <object class="GtkButton" id="remove">
                 <property name="label" translatable="yes" context="contentcontordlg|remove">Remove</property>
                 <property name="visible">True</property>
+                <property name="sensitive">False</property>
                 <property name="can-focus">True</property>
                 <property name="receives-default">True</property>
               </object>
@@ -242,6 +244,7 @@
               <object class="GtkButton" id="moveup">
                 <property name="label" translatable="yes" context="contentcontordlg|moveup">Move Up</property>
                 <property name="visible">True</property>
+                <property name="sensitive">False</property>
                 <property name="can-focus">True</property>
                 <property name="receives-default">True</property>
               </object>
@@ -256,6 +259,7 @@
               <object class="GtkButton" id="movedown">
                 <property name="label" translatable="yes" context="contentcontordlg|movedown">Move Down</property>
                 <property name="visible">True</property>
+                <property name="sensitive">False</property>
                 <property name="can-focus">True</property>
                 <property name="receives-default">True</property>
               </object>
