tdf#149186: Table of contents editor not showing buttons in Dutch UI
With gen or kf5 renderings, I noticed this log:
warn:vcl.layout:710042:710042:vcl/source/window/layout.cxx:288: nExtraSpace went negative, setting to zero for VclBox: modules/swriter/ui/tocentriespage/box2

after some tests, it seems "visible" property was lacking for some items.

Change-Id: Idbdd75790607b1928bfc583004041f7f98688ae6

--- a/sw/uiconfig/swriter/ui/tocentriespage.ui
+++ b/sw/uiconfig/swriter/ui/tocentriespage.ui
@@ -544,6 +544,7 @@
                             <child>
                               <object class="GtkButton" id="insert">
                                 <property name="label" translatable="yes" context="tocentriespage|insert">_Insert</property>
+                                <property name="visible">True</property>
                                 <property name="can-focus">True</property>
                                 <property name="receives-default">True</property>
                                 <property name="no-show-all">True</property>
@@ -563,6 +564,7 @@
                             <child>
                               <object class="GtkButton" id="remove">
                                 <property name="label" translatable="yes" context="tocentriespage|remove">_Remove</property>
+                                <property name="visible">True</property>
                                 <property name="can-focus">True</property>
                                 <property name="receives-default">True</property>
                                 <property name="no-show-all">True</property>
@@ -582,6 +584,7 @@
                             <child>
                               <object class="GtkButton" id="chapterno">
                                 <property name="label" translatable="yes" context="tocentriespage|chapterno">Chapter No.</property>
+                                <property name="visible">True</property>
                                 <property name="can-focus">True</property>
                                 <property name="receives-default">True</property>
                                 <property name="no-show-all">True</property>
