--- a/sw/uiconfig/swriter/ui/pagenumberdlg.ui
+++ b/sw/uiconfig/swriter/ui/pagenumberdlg.ui
@@ -4,19 +4,19 @@
   <requires lib="gtk+" version="3.20"/>
   <object class="GtkDialog" id="PageNumberDialog">
     <property name="can-focus">False</property>
+    <property name="border-width">6</property>
     <property name="title" translatable="yes" context="pagenumberdlg|PageNumberDialog">Page Number Wizard</property>
-    <property name="resizable">False</property>
+    <property name="modal">True</property>
     <property name="default-width">0</property>
     <property name="default-height">0</property>
     <property name="type-hint">dialog</property>
-    <property name="gravity">north-east</property>
     <child internal-child="vbox">
-      <object class="GtkBox" id="mainVBox">
+      <object class="GtkBox" id="dialog-vbox1">
         <property name="can-focus">False</property>
         <property name="orientation">vertical</property>
-        <property name="spacing">2</property>
+        <property name="spacing">12</property>
         <child internal-child="action_area">
-          <object class="GtkButtonBox" id="buttonBox">
+          <object class="GtkButtonBox" id="dialog-action_area1">
             <property name="can-focus">False</property>
             <property name="layout-style">end</property>
             <child>
@@ -28,7 +28,7 @@
                 <property name="use-underline">True</property>
               </object>
               <packing>
-                <property name="expand">True</property>
+                <property name="expand">False</property>
                 <property name="fill">True</property>
                 <property name="position">0</property>
               </packing>
@@ -42,15 +42,31 @@
                 <property name="use-underline">True</property>
               </object>
               <packing>
-                <property name="expand">True</property>
+                <property name="expand">False</property>
                 <property name="fill">True</property>
                 <property name="position">1</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkButton" id="help">
+                <property name="label" translatable="yes" context="stock">_Help</property>
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="receives-default">True</property>
+                <property name="use-underline">True</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">2</property>
+                <property name="secondary">True</property>
               </packing>
             </child>
           </object>
           <packing>
             <property name="expand">False</property>
-            <property name="fill">False</property>
+            <property name="fill">True</property>
+            <property name="pack-type">end</property>
             <property name="position">1</property>
           </packing>
         </child>
@@ -58,26 +74,22 @@
           <object class="GtkBox" id="HBox">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
-            <property name="spacing">29</property>
+            <property name="spacing">12</property>
             <child>
               <object class="GtkBox" id="leftVBox">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
-                <property name="margin-end">10</property>
-                <property name="margin-bottom">10</property>
                 <property name="hexpand">True</property>
                 <property name="orientation">vertical</property>
+                <property name="spacing">6</property>
                 <child>
                   <object class="GtkLabel" id="positionLabel">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
                     <property name="halign">start</property>
-                    <property name="xpad">7</property>
-                    <property name="ypad">7</property>
                     <property name="label" translatable="yes" context="pagenumberdlg|positionLabel">Position:</property>
-                    <accessibility>
-                      <relation type="label-for" target="positionCombo"/>
-                    </accessibility>
+                    <property name="use-underline">True</property>
+                    <property name="mnemonic-widget">positionCombo</property>
                     <child internal-child="accessible">
                       <object class="AtkObject" id="positionLabel-atkobject">
                         <property name="AtkObject::accessible-name" translatable="yes" context="pagenumberdlg|positionLabel-atkobject">Position</property>
@@ -96,12 +108,14 @@
                     <property name="can-focus">False</property>
                     <property name="active">1</property>
                     <items>
-                      <item translatable="yes" context="pagenumberdlg|liststore2">Top of page (Header)</item>
-                      <item translatable="yes" context="pagenumberdlg|liststore2">Bottom of page (Footer)</item>
+                      <item translatable="yes" context="pagenumberdlg|positionCombo">Top of page (Header)</item>
+                      <item translatable="yes" context="pagenumberdlg|positionCombo">Bottom of page (Footer)</item>
                     </items>
-                    <accessibility>
-                      <relation type="labelled-by" target="positionLabel"/>
-                    </accessibility>
+                    <child internal-child="accessible">
+                      <object class="AtkObject" id="positionCombo-atkobject">
+                        <property name="AtkObject::accessible-description" translatable="yes" context="pagenumbering|extended_tip|positionCombo">Insert page number in footer.</property>
+                      </object>
+                    </child>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -114,12 +128,10 @@
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
                     <property name="halign">start</property>
-                    <property name="xpad">7</property>
-                    <property name="ypad">7</property>
+                    <property name="margin-top">3</property>
                     <property name="label" translatable="yes" context="pagenumberdlg|alignmentLabel">Alignment:</property>
-                    <accessibility>
-                      <relation type="label-for" target="alignmentCombo"/>
-                    </accessibility>
+                    <property name="use-underline">True</property>
+                    <property name="mnemonic-widget">alignmentCombo</property>
                     <child internal-child="accessible">
                       <object class="AtkObject" id="alignmentLabel-atkobject">
                         <property name="AtkObject::accessible-name" translatable="yes" context="pagenumberdlg|alignmentLabel-atkobject">Alignment</property>
@@ -138,13 +150,15 @@
                     <property name="can-focus">False</property>
                     <property name="active">0</property>
                     <items>
-                      <item translatable="yes" context="pagenumberdlg|liststore1">Left</item>
-                      <item translatable="yes" context="pagenumberdlg|liststore1">Center</item>
-                      <item translatable="yes" context="pagenumberdlg|liststore1">Right</item>
+                      <item translatable="yes" context="pagenumberdlg|alignmentCombo">Left</item>
+                      <item translatable="yes" context="pagenumberdlg|alignmentCombo">Center</item>
+                      <item translatable="yes" context="pagenumberdlg|alignmentCombo">Right</item>
                     </items>
-                    <accessibility>
-                      <relation type="labelled-by" target="alignmentLabel"/>
-                    </accessibility>
+                    <child internal-child="accessible">
+                      <object class="AtkObject" id="alignmentCombo-atkobject">
+                        <property name="AtkObject::accessible-description" translatable="yes" context="pagenumbering|extended_tip|alignmentCombo">Align page number in page footer or header.</property>
+                      </object>
+                    </child>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -154,15 +168,16 @@
                 </child>
                 <child>
                   <object class="GtkCheckButton" id="mirrorCheckbox">
-                    <property name="label" translatable="yes" context="numberingoptionspage|mirrorCheckbox">Mirror on even pages</property>
+                    <property name="label" translatable="yes" context="pagenumberdlg|mirrorCheckbox">Mirror on even pages</property>
                     <property name="visible">True</property>
                     <property name="can-focus">True</property>
                     <property name="receives-default">False</property>
+                    <property name="margin-start">18</property>
                     <property name="use-underline">True</property>
                     <property name="draw-indicator">True</property>
                     <child internal-child="accessible">
                       <object class="AtkObject" id="mirrorCheckbox-atkobject">
-                        <property name="AtkObject::accessible-description" translatable="yes" context="numberingoptionspage|extended_tip|mirrorCheckbox">Creates separate left/right pages with mirrored page number placements</property>
+                        <property name="AtkObject::accessible-description" translatable="yes" context="pagenumberdlg|extended_tip|mirrorCheckbox">Creates separate left/right pages with mirrored page number placements</property>
                       </object>
                     </child>
                   </object>
@@ -199,7 +214,7 @@
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
                     <property name="halign">start</property>
-                    <property name="margin-top">6</property>
+                    <property name="margin-top">3</property>
                     <property name="label" translatable="yes" context="pagenumberdlg|numfmtLabel">Page numbers:</property>
                     <property name="use-underline">True</property>
                     <property name="mnemonic-widget">numfmtlb</property>
@@ -227,7 +242,7 @@
                     </accessibility>
                     <child internal-child="accessible">
                       <object class="AtkObject" id="numfmtlb-atkobject">
-                        <property name="AtkObject::accessible-description" translatable="yes" context="numberingoptionspage|extended_tip|numfmtlb">Select a numbering scheme for the page numbering.</property>
+                        <property name="AtkObject::accessible-description" translatable="yes" context="pagenumberdlg|extended_tip|numfmtlb">Select a numbering scheme for the page numbering.</property>
                       </object>
                     </child>
                   </object>
@@ -248,20 +263,15 @@
               <object class="GtkBox" id="rightVBox">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
-                <property name="margin-end">10</property>
-                <property name="margin-bottom">10</property>
                 <property name="orientation">vertical</property>
                 <child>
                   <object class="GtkLabel" id="previewLabel">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
-                    <property name="xpad">7</property>
-                    <property name="ypad">7</property>
+                    <property name="halign">start</property>
                     <property name="label" translatable="yes" context="pagenumberdlg|previewLabel">Preview</property>
-                    <property name="justify">center</property>
-                    <accessibility>
-                      <relation type="label-for" target="previewImage"/>
-                    </accessibility>
+                    <property name="use-underline">True</property>
+                    <property name="mnemonic-widget">previewImage</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -273,9 +283,6 @@
                   <object class="GtkImage" id="previewImage">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
-                    <accessibility>
-                      <relation type="labelled-by" target="previewLabel"/>
-                    </accessibility>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -302,6 +309,7 @@
     <action-widgets>
       <action-widget response="-5">ok</action-widget>
       <action-widget response="-6">cancel</action-widget>
+      <action-widget response="-11">help</action-widget>
     </action-widgets>
   </object>
 </interface>
