tdf#153653  vertical centering of "Assign" button
Change-Id: I55d14e419f008684fdd184ece79c2e50f37f9aa0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147981
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>

--- a/sw/uiconfig/swriter/ui/tocstylespage.ui
+++ b/sw/uiconfig/swriter/ui/tocstylespage.ui
@@ -212,7 +212,7 @@
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
                 <property name="halign">center</property>
-                <property name="valign">start</property>
+                <property name="valign">center</property>
                 <property name="image">image1</property>
                 <property name="tooltip_text" translatable="yes" context="tocstylespage|assign">Assign</property>
                 <property name="always-show-image">True</property>
