--- a/svx/uiconfig/ui/accessibilitycheckentry.ui
+++ b/svx/uiconfig/ui/accessibilitycheckentry.ui
@@ -41,5 +41,18 @@
         <property name="position">1</property>
       </packing>
     </child>
+    <child>
+      <object class="GtkButton" id="accessibilityCheckEntryFixButton">
+        <property name="label" translatable="yes" context="accessibilitycheckentry|accessibilityCheckEntryFixButton">Fix</property>
+        <property name="visible">True</property>
+        <property name="can-focus">True</property>
+        <property name="receives-default">True</property>
+      </object>
+      <packing>
+        <property name="expand">False</property>
+        <property name="fill">False</property>
+        <property name="position">2</property>
+      </packing>
+    </child>
   </object>
 </interface>
