--- a/sw/uiconfig/swriter/ui/bibliofragment.ui
+++ b/sw/uiconfig/swriter/ui/bibliofragment.ui
@@ -109,30 +109,6 @@
       </packing>
     </child>
     <child>
-      <object class="GtkBox" id="togglebox">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="orientation">vertical</property>
-        <child>
-          <object class="GtkCheckButton" id="usetargeturlcb">
-            <property name="label" translatable="yes" context=""></property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">False</property>
-            <property name="draw_indicator">True</property>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">0</property>
-          </packing>
-        </child>
-      </object>
-      <packing>
-        <property name="left_attach">1</property>
-        <property name="top_attach">0</property>
-      </packing>
-    </child>
-    <child>
       <object class="GtkComboBoxText" id="listbox">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
@@ -169,6 +145,23 @@
       </object>
       <packing>
         <property name="left_attach">0</property>
+        <property name="top_attach">0</property>
+      </packing>
+    </child>
+    <child>
+      <object class="GtkComboBoxText" id="listbox-target-type">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="hexpand">True</property>
+        <items>
+          <item id="0" translatable="yes" context="bibliofragment|targettype0">Open Display URL</item>
+          <item id="1" translatable="yes" context="bibliofragment|targettype1">Open Target URL</item>
+          <item id="2" translatable="yes" context="bibliofragment|targettype2">None</item>
+          <item id="3" translatable="yes" context="bibliofragment|targettype3">Jump to Bibliography Table Row</item>
+        </items>
+      </object>
+      <packing>
+        <property name="left_attach">3</property>
         <property name="top_attach">0</property>
       </packing>
     </child>
