Fix number decimal separator in cui/editmodulesdialog.ui
Change-Id: Ie10f061f5feb97ce5e251aba03c5a0d21d7c0f62
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150390
Tested-by: Jenkins
Tested-by: Olivier Hallot <olivier.hallot@libreoffice.org>
Reviewed-by: Olivier Hallot <olivier.hallot@libreoffice.org>

--- a/cui/uiconfig/ui/editmodulesdialog.ui
+++ b/cui/uiconfig/ui/editmodulesdialog.ui
@@ -278,7 +278,7 @@
                               <object class="GtkTreeViewColumn" id="treeviewcolumn1">
                                 <property name="resizable">True</property>
                                 <property name="spacing">6</property>
-                                <property name="alignment">0,50000000000000000000</property>
+                                <property name="alignment">0.50000000000000000000</property>
                                 <child>
                                   <object class="GtkCellRendererToggle" id="cellrenderer5"/>
                                   <attributes>
@@ -292,7 +292,7 @@
                               <object class="GtkTreeViewColumn" id="treeviewcolumn2">
                                 <property name="resizable">True</property>
                                 <property name="spacing">6</property>
-                                <property name="alignment">0,50000000000000000000</property>
+                                <property name="alignment">0.50000000000000000000</property>
                                 <child>
                                   <object class="GtkCellRendererText" id="cellrenderer4"/>
                                   <attributes>
