--- a/svx/uiconfig/ui/crashreportdlg.ui
+++ b/svx/uiconfig/ui/crashreportdlg.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.36.0 -->
+<!-- Generated with glade 3.40.0 -->
 <interface domain="svx">
   <requires lib="gtk+" version="3.20"/>
   <object class="GtkTextBuffer" id="textbuffer1">
@@ -13,31 +13,31 @@ Add detailed instructions on how to reproduce the crash and the shown crash ID i
 Thank you for your help in improving %PRODUCTNAME.</property>
   </object>
   <object class="GtkDialog" id="CrashReportDialog">
-    <property name="can_focus">False</property>
-    <property name="border_width">6</property>
+    <property name="can-focus">False</property>
+    <property name="border-width">6</property>
     <property name="title" translatable="yes" context="crashreportdlg|CrashReportDialog">Crash Report</property>
     <property name="modal">True</property>
-    <property name="default_width">0</property>
-    <property name="default_height">0</property>
-    <property name="type_hint">dialog</property>
+    <property name="default-width">0</property>
+    <property name="default-height">0</property>
+    <property name="type-hint">dialog</property>
     <child internal-child="vbox">
       <object class="GtkBox" id="dialog-vbox1">
-        <property name="can_focus">False</property>
+        <property name="can-focus">False</property>
         <property name="orientation">vertical</property>
         <property name="spacing">12</property>
         <child internal-child="action_area">
           <object class="GtkButtonBox" id="dialog-action_area1">
-            <property name="can_focus">False</property>
-            <property name="layout_style">end</property>
+            <property name="can-focus">False</property>
+            <property name="layout-style">end</property>
             <child>
               <object class="GtkButton" id="btn_send">
                 <property name="label" translatable="yes" context="crashreportdlg|btn_send">_Send Crash Report</property>
                 <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="can_default">True</property>
-                <property name="has_default">True</property>
-                <property name="receives_default">True</property>
-                <property name="use_underline">True</property>
+                <property name="can-focus">True</property>
+                <property name="can-default">True</property>
+                <property name="has-default">True</property>
+                <property name="receives-default">True</property>
+                <property name="use-underline">True</property>
               </object>
               <packing>
                 <property name="expand">True</property>
@@ -49,9 +49,9 @@ Thank you for your help in improving %PRODUCTNAME.</property>
               <object class="GtkButton" id="btn_cancel">
                 <property name="label" translatable="yes" context="crashreportdlg|btn_cancel">Do _Not Send</property>
                 <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
-                <property name="use_underline">True</property>
+                <property name="can-focus">True</property>
+                <property name="receives-default">True</property>
+                <property name="use-underline">True</property>
               </object>
               <packing>
                 <property name="expand">True</property>
@@ -62,8 +62,8 @@ Thank you for your help in improving %PRODUCTNAME.</property>
             <child>
               <object class="GtkButton" id="btn_close">
                 <property name="label" translatable="yes" context="crashreportdlg|btn_close">Close</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
+                <property name="can-focus">True</property>
+                <property name="receives-default">True</property>
               </object>
               <packing>
                 <property name="expand">True</property>
@@ -81,12 +81,12 @@ Thank you for your help in improving %PRODUCTNAME.</property>
         <child>
           <object class="GtkLabel" id="ed_pre">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <property name="label" translatable="yes" context="crashreportdlg|ed_pre">Unfortunately it seems that %PRODUCTNAME crashed when it was last run.
 
 You can help us to fix this issue by sending an anonymous crash report to the %PRODUCTNAME crash reporting server.</property>
             <property name="wrap">True</property>
-            <property name="max_width_chars">80</property>
+            <property name="max-width-chars">80</property>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -96,13 +96,13 @@ You can help us to fix this issue by sending an anonymous crash report to the %P
         </child>
         <child>
           <object class="GtkTextView" id="ed_post">
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <property name="valign">center</property>
             <property name="editable">False</property>
-            <property name="wrap_mode">word</property>
-            <property name="cursor_visible">False</property>
+            <property name="wrap-mode">word</property>
+            <property name="cursor-visible">False</property>
             <property name="buffer">textbuffer1</property>
-            <property name="accepts_tab">False</property>
+            <property name="accepts-tab">False</property>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -112,12 +112,12 @@ You can help us to fix this issue by sending an anonymous crash report to the %P
         </child>
         <child>
           <object class="GtkTextView" id="ed_bugreport">
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <property name="editable">False</property>
-            <property name="wrap_mode">word</property>
-            <property name="cursor_visible">False</property>
+            <property name="wrap-mode">word</property>
+            <property name="cursor-visible">False</property>
             <property name="buffer">textbuffer2</property>
-            <property name="accepts_tab">False</property>
+            <property name="accepts-tab">False</property>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -129,9 +129,9 @@ You can help us to fix this issue by sending an anonymous crash report to the %P
           <object class="GtkCheckButton" id="check_safemode">
             <property name="label" translatable="yes" context="crashreportdlg|check_safemode">Restart %PRODUCTNAME to enter safe mode</property>
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">False</property>
-            <property name="draw_indicator">True</property>
+            <property name="can-focus">True</property>
+            <property name="receives-default">False</property>
+            <property name="draw-indicator">True</property>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -154,9 +154,6 @@ You can help us to fix this issue by sending an anonymous crash report to the %P
           </packing>
         </child>
       </object>
-    </child>
-    <child type="titlebar">
-      <placeholder/>
     </child>
   </object>
 </interface>
