--- a/sc/uiconfig/scalc/ui/sidebarnumberformat.ui
+++ b/sc/uiconfig/scalc/ui/sidebarnumberformat.ui
@@ -199,6 +199,9 @@
             <property name="label" translatable="yes" context="sidebarnumberformat|leadingzeroeslabel">Leading _zeroes:</property>
             <property name="use_underline">True</property>
             <property name="xalign">0</property>
+            <accessibility>
+                <relation type="label-for" target="leadingzeroes"/>
+            </accessibility>
           </object>
           <packing>
             <property name="left_attach">0</property>
@@ -218,6 +221,9 @@
                 <property name="AtkObject::accessible-name" translatable="yes" context="sidebarnumberformat|leadingzeroes-atkobject">Leading Zeroes</property>
               </object>
             </child>
+            <accessibility>
+                <relation type="labelled-by" target="leadingzeroeslabel"/>
+            </accessibility>
           </object>
           <packing>
             <property name="left_attach">1</property>
