--- a/desktop/uiconfig/ui/dependenciesdialog.ui
+++ b/desktop/uiconfig/ui/dependenciesdialog.ui
@@ -75,6 +75,9 @@
                 <property name="width-chars">50</property>
                 <property name="max_width_chars">50</property>
                 <property name="xalign">0</property>
+                <accessibility>
+                  <relation type="label-for" target="depListTreeview"/>
+                </accessibility>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -99,6 +102,9 @@
                     <property name="headers_visible">False</property>
                     <property name="search_column">0</property>
                     <property name="show_expanders">False</property>
+                <accessibility>
+                  <relation type="labelled-by" target="label1"/>
+                </accessibility>
                     <child internal-child="selection">
                       <object class="GtkTreeSelection" id="Macro Library List-selection2"/>
                     </child>
