--- a/sc/uiconfig/scalc/ui/sortcriteriapage.ui
+++ b/sc/uiconfig/scalc/ui/sortcriteriapage.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.38.2 -->
+<!-- Generated with glade 3.40.0 -->
 <interface domain="sc">
   <requires lib="gtk+" version="3.20"/>
   <object class="GtkBox" id="TopWindow">
@@ -98,9 +98,6 @@
                 <property name="use-underline">True</property>
                 <property name="draw-indicator">True</property>
                 <property name="group">rbTopDown</property>
-                <accessibility>
-                  <relation type="labelled-by" target="lbDirection"/>
-                </accessibility>
               </object>
               <packing>
                 <property name="left-attach">1</property>
@@ -112,10 +109,9 @@
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
                 <property name="label" translatable="yes" context="sortcriteriapage|lbDirection">Direction:</property>
+                <property name="use-underline">True</property>
+                <property name="mnemonic-widget">rbTopDown</property>
                 <property name="xalign">1</property>
-                <accessibility>
-                    <relation type="label-for" target="rbLeftRight"/>
-                </accessibility>
               </object>
               <packing>
                 <property name="left-attach">0</property>
@@ -130,9 +126,6 @@
                 <property name="receives-default">False</property>
                 <property name="use-underline">True</property>
                 <property name="draw-indicator">True</property>
-                <accessibility>
-                  <relation type="labelled-by" target="lbHeader"/>
-                </accessibility>
               </object>
               <packing>
                 <property name="left-attach">1</property>
@@ -144,10 +137,9 @@
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
                 <property name="label" translatable="yes" context="sortcriteriapage|lbHeader">Headers:</property>
+                <property name="use-underline">True</property>
+                <property name="mnemonic-widget">cbHeader</property>
                 <property name="xalign">1</property>
-                <accessibility>
-                    <relation type="label-for" target="cbHeader"/>
-                </accessibility>
               </object>
               <packing>
                 <property name="left-attach">0</property>
