--- a/sc/uiconfig/scalc/ui/sortkey.ui
+++ b/sc/uiconfig/scalc/ui/sortkey.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.38.2 -->
+<!-- Generated with glade 3.40.0 -->
 <interface domain="sc">
   <requires lib="gtk+" version="3.20"/>
   <object class="GtkFrame" id="SortKeyFrame">
@@ -29,9 +29,6 @@
                 <property name="AtkObject::accessible-description" translatable="yes" context="sortkey|extended_tip|sortlb">Select the column that you want to use as the primary sort key.</property>
               </object>
             </child>
-            <accessibility>
-                <relation type="labelled-by" target="lbColRow"/>
-            </accessibility>
           </object>
           <packing>
             <property name="left-attach">1</property>
@@ -84,10 +81,9 @@
             <property name="visible">True</property>
             <property name="can-focus">False</property>
             <property name="label">Column/Row:</property>
+            <property name="use-underline">True</property>
+            <property name="mnemonic-widget">sortlb</property>
             <property name="xalign">1</property>
-            <accessibility>
-                <relation type="label-for" target="sortlb"/>
-            </accessibility>
           </object>
           <packing>
             <property name="left-attach">0</property>
