tdf#151624 Fix Insert Formula tool in the Tabbed UI
As reported in the ticket the Insert Formula tool was misaligned in the
Tabbed UI since the removal of the Emoji tool.

This patch fixes that by making the tool use all the available vertical
space.

Change-Id: I26d36ba4fc6f38e80d8ab46bfdf88c08fbf2fd68
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150701
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>

--- a/sw/uiconfig/swriter/ui/notebookbar.ui
+++ b/sw/uiconfig/swriter/ui/notebookbar.ui
@@ -5643,8 +5643,11 @@
                               <object class="sfxlo-NotebookbarToolBox" id="LineA12">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
-                                <property name="toolbar_style">both-horiz</property>
+                                <property name="valign">center</property>
+                                <property name="vexpand">True</property>
+                                <property name="toolbar_style">both</property>
                                 <property name="show_arrow">False</property>
+                                <property name="icon_size">3</property>
                                 <child>
                                   <object class="GtkToolButton" id="Insert-InsertObjectStarMath1">
                                     <property name="visible">True</property>
